Add security functions

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "BlogData": "Server=(localdb)\\mssqllocaldb;Database=ExploreSydney;Trusted_Connection=True;"
+    "BlogData": "Server=(localdb)\\mssqllocaldb;Database=ExploreSydney;Trusted_Connection=True;",
+    "IdentityData": "Server=(localdb)\\mssqllocaldb;Database=ExploreSydney_Identity;Trusted_Connection=True;"
   },
   "FeatureToggles": {
     "DevelopementExceptions": true
